--- a/upydevice_kernel_demo.ipynb
+++ b/upydevice_kernel_demo.ipynb
@@ -204,6 +204,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\n",
+      " ** WebREPL connected **\n",
+      "\u001b[0m\n",
+      "MicroPython v1.11-183-ga8e3201b3 on 2019-07-31; ESP32 module with ESP32\n",
+      "Type \"help()\" for more information.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%websocketconnect '192.168.1.49' --password 'keyespw'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['boot.py', 'webrepl_cfg.py', 'main.py', 'pyboard_conn.py', 'sdcard.py', 'SD_Timer_LSM9DS1.py', 'init_IMU.py', 'lsm9ds1.py', 'SD_AM.py', 'udummy.py', 'sync_tool.py', 'lib', 'upydev_.config', 'dummy_script.py', 'dummy_time.py', 'time_it.py', 'buzzertools.py', 'bme280.py', 'init_BME280.py', 'socket_client_server.py', 'dac_signal_gen.py', 'stepper.py', 'servo.py', 'mqtt_client.py', 'init_ADS.py', 'ads1115.py', 'init_INA219.py', 'ina219.py', 'dcmotor.py', 'dummy_inf_loop.py', 'test_code.py', 'weatpy_json_api.py', 'maes.mpy', 'wifi_.config', 'ap_.config', 'wifiutils.py', 'wsec_util.py', 'irq_controller.py', 'error.log', 'exception.txt', 'BME_util.py', 'STREAMER_util.py', 'example_upylog.py', 'upylog.py', 'upylog_test_code.py', 'Timer_LSM9DS1.py', 'init_IMU_OLD.py', 'upynotify.py', 'weatpy_tcp_api.py', 'upy_pub_rsa30aea41e73f8.key', 'SSL_key30aea41e73f8.der', 'SSL_certificate30aea41e73f8.der', 'example.txt', 'test_dir']\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
