fix SerialDevice info command & upydevice requirement version

--- a/upydevice_kernel_demo.ipynb
+++ b/upydevice_kernel_demo.ipynb
@@ -268,26 +268,20 @@
    "source": [
     "os.listdir()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "MicroPython upydevice kernel",
-   "language": "micropython",
+   "language": "python",
    "name": "micropython-upydevice"
   },
   "language_info": {
    "codemirror_mode": "python",
    "file_extension": ".py",
-   "mimetype": "text/python",
-   "name": "micropython"
+   "mimetype": "text/x-python",
+   "name": "python",
+   "pygments_lexer": "python"
   }
  },
  "nbformat": 4,
