initial tests with nrf52832

--- a/upydevice_kernel_demo.ipynb
+++ b/upydevice_kernel_demo.ipynb
@@ -1050,6 +1050,155 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Service] 6e400001-b5a3-f393-e0a9-e50e24dcca9e: Nordic UART Service\n",
+      "\t[Characteristic] 6e400003-b5a3-f393-e0a9-e50e24dcca9e: (notify) | Name: Nordic UART TX\n",
+      "\t\t[Descriptor] [00002902-0000-1000-8000-00805f9b34fb]: Client Characteristic Configuration (Handle: 17) \n",
+      "\t[Characteristic] 6e400002-b5a3-f393-e0a9-e50e24dcca9e: (write-without-response,write) | Name: Nordic UART RX\n",
+      "\u001b[32m\n",
+      " ** BleREPL connected **\n",
+      "\u001b[0m\n",
+      "BleDevice @ F53EDB2E-25A2-45A7-95A5-4D775DFE51D2, Type: nrf52 , Class: BleDevice\n",
+      "Firmware: MicroPython v1.4.5-7345-g9d1f1c2f9-dirty on 2021-04-29; COLMI P8 with NRF52832\n",
+      "(MAC: dd:a7:ca:85:a6:c4, Local Name: P8, RSSI: -73 dBm)\n",
+      "\n",
+      "MicroPython v1.4.5-7345-g9d1f1c2f9-dirty on 2021-04-29; COLMI P8 with NRF52832\n",
+      "Type \"help()\" for more information.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%bleconnect @p8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print('Hello')\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEVICE: P8, UUID: F53EDB2E-25A2-45A7-95A5-4D775DFE51D2, ID: dda7ca85a6c4\n",
+      "SYSTEM NAME: nrf52\n",
+      "NODE NAME: nrf52\n",
+      "RELEASE: 1.13.0\n",
+      "VERSION: v1.4.5-7345-g9d1f1c2f9-dirty on 2021-04-29\n",
+      "MACHINE: COLMI P8 with NRF52832\n"
+     ]
+    }
+   ],
+   "source": [
+    "%whoami"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mDevice nrf52 disconnected.\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "%disconnect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os.listdir()\n",
+      "['blittest.py', 'lib', 'main.py', 'pass_qr.pbm', 'test_watch.py']\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import time\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "*** OSError *** \n",
+      "\n",
+      "\n",
+      " Characteristic 6e400002-b5a3-f393-e0a9-e50e24dcca9e was not found! \n",
+      "\u001b[31m\n",
+      "\n",
+      "*** Connection broken ***\n",
+      "\u001b[0mYou may need to reconnect"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print('Hello')\n",
+    "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
