upydevice kernel demo for bledevice

--- a/upydevice_kernel_demo.ipynb
+++ b/upydevice_kernel_demo.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -285,11 +285,11 @@
       " ** Serial connected **\n",
       "\n",
       "\u001b[0mSerialDevice @ /dev/tty.SLAB_USBtoUART, Type: esp32, Class: SerialDevice\n",
-      "Firmware: MicroPython v1.15 on 2021-05-28; ESP32 module with ESP32\n",
+      "Firmware: MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
       "CP2104 USB to UART Bridge Controller, Manufacturer: Silicon Labs\n",
       "(MAC: 30:ae:a4:23:35:64)\n",
       "\n",
-      "MicroPython v1.15 on 2021-05-28; ESP32 module with ESP32\n",
+      "MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
       "Type \"help()\" for more information.\n"
      ]
     }
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(sysname='esp32', nodename='esp32', release='1.15.0', version='v1.15 on 2021-05-28', machine='ESP32 module with ESP32')\n"
+      "(sysname='esp32', nodename='esp32', release='1.16.0', version='v1.16 on 2021-06-24', machine='ESP32 module with ESP32')\n"
      ]
     }
    ],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,11 +433,11 @@
       " ** Serial connected **\n",
       "\n",
       "\u001b[0mSerialDevice @ /dev/tty.usbmodem387E386731342, Type: pyboard, Class: SerialDevice\n",
-      "Firmware: MicroPython v1.15-155-g62f75376d on 2021-05-28; PYBLITEv1.0 with STM32F411RE\n",
+      "Firmware: MicroPython v1.16-60-gc1f74b300 on 2021-07-07; PYBLITEv1.0 with STM32F411RE\n",
       "Pyboard Virtual Comm Port in FS Mode, Manufacturer: MicroPython\n",
       "(MAC: 33:00:4e:00:03:51:34:31:34:38:30:38)\n",
       "\n",
-      "MicroPython v1.15-155-g62f75376d on 2021-05-28; PYBLITEv1.0 with STM32F411RE\n",
+      "MicroPython v1.16-60-gc1f74b300 on 2021-07-07; PYBLITEv1.0 with STM32F411RE\n",
       "Type \"help()\" for more information.\n"
      ]
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(sysname='pyboard', nodename='pyboard', release='1.15.0', version='v1.15-155-g62f75376d on 2021-05-28', machine='PYBLITEv1.0 with STM32F411RE')\n"
+       "(sysname='pyboard', nodename='pyboard', release='1.16.0', version='v1.16-60-gc1f74b300 on 2021-07-07', machine='PYBLITEv1.0 with STM32F411RE')\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,13 +477,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "(sysname='pyboard', nodename='pyboard', release='1.16.0', version='v1.16-60-gc1f74b300 on 2021-07-07', machine='PYBLITEv1.0 with STM32F411RE')\n"
+     ]
     }
    ],
    "source": [
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -570,11 +572,11 @@
       " ** Serial connected **\n",
       "\n",
       "\u001b[0mSerialDevice @ /dev/tty.usbmodem387E386731342, Type: pyboard, Class: SerialDevice\n",
-      "Firmware: MicroPython v1.15-155-g62f75376d on 2021-05-28; PYBLITEv1.0 with STM32F411RE\n",
+      "Firmware: MicroPython v1.16-60-gc1f74b300 on 2021-07-07; PYBLITEv1.0 with STM32F411RE\n",
       "Pyboard Virtual Comm Port in FS Mode, Manufacturer: MicroPython\n",
       "(MAC: 33:00:4e:00:03:51:34:31:34:38:30:38)\n",
       "\n",
-      "MicroPython v1.15-155-g62f75376d on 2021-05-28; PYBLITEv1.0 with STM32F411RE\n",
+      "MicroPython v1.16-60-gc1f74b300 on 2021-07-07; PYBLITEv1.0 with STM32F411RE\n",
       "Type \"help()\" for more information.\n"
      ]
     }
@@ -600,7 +602,7 @@
     {
      "data": {
       "text/plain": [
-       "(sysname='pyboard', nodename='pyboard', release='1.15.0', version='v1.15-155-g62f75376d on 2021-05-28', machine='PYBLITEv1.0 with STM32F411RE')\n"
+       "(sysname='pyboard', nodename='pyboard', release='1.16.0', version='v1.16-60-gc1f74b300 on 2021-07-07', machine='PYBLITEv1.0 with STM32F411RE')\n"
       ]
      },
      "execution_count": 3,
@@ -621,7 +623,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(sysname='pyboard', nodename='pyboard', release='1.15.0', version='v1.15-155-g62f75376d on 2021-05-28', machine='PYBLITEv1.0 with STM32F411RE')\n"
+      "\n",
+      "(sysname='pyboard', nodename='pyboard', release='1.16.0', version='v1.16-60-gc1f74b300 on 2021-07-07', machine='PYBLITEv1.0 with STM32F411RE')\n"
      ]
     }
    ],
@@ -694,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,13 +706,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Hello\n",
       "Hello\n",
       "Hello\n",
@@ -809,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +822,7 @@
        "'3.7.9 (v3.7.9:13c94747c7, Aug 15 2020, 01:31:08) \\n[Clang 6.0 (clang-600.0.57)]'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +851,53 @@
       "\u001b[0m\n",
       "BleDevice @ 9998175F-9A91-4CA2-B5EA-482AFC3453B9, Type: esp32 , Class: BleDevice\n",
       "Firmware: MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
-      "(MAC: 30:ae:a4:23:35:64, Local Name: esp32-34, RSSI: -59 dBm)\n",
+      "(MAC: 30:ae:a4:23:35:64, Local Name: esp32-34, RSSI: -58 dBm)\n",
+      "\n",
+      "MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
+      "Type \"help()\" for more information.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%bleconnect 9998175F-9A91-4CA2-B5EA-482AFC3453B9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mDevice esp32 disconnected.\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "%disconnect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Service] 6e400001-b5a3-f393-e0a9-e50e24dcca9e: Nordic UART Service\n",
+      "\t[Characteristic] 6e400003-b5a3-f393-e0a9-e50e24dcca9e: (notify) | Name: Nordic UART TX\n",
+      "\t\t[Descriptor] [00002902-0000-1000-8000-00805f9b34fb]: Client Characteristic Configuration (Handle: 22) \n",
+      "\t[Characteristic] 6e400002-b5a3-f393-e0a9-e50e24dcca9e: (write) | Name: Nordic UART RX\n",
+      "\u001b[32m\n",
+      " ** BleREPL connected **\n",
+      "\u001b[0m\n",
+      "BleDevice @ 9998175F-9A91-4CA2-B5EA-482AFC3453B9, Type: esp32 , Class: BleDevice\n",
+      "Firmware: MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
+      "(MAC: 30:ae:a4:23:35:64, Local Name: esp32-34, RSSI: -50 dBm)\n",
       "\n",
       "MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
       "Type \"help()\" for more information.\n"
@@ -860,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,13 +945,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "3\n"
      ]
     }
@@ -912,14 +963,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -936,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1012,7 @@
      "output_type": "stream",
      "text": [
       "Memmory         Size        Used       Avail        Use%    \n",
-      "RAM          108.562 KB  92.875 KB   15.688 KB    85.5 %\n"
+      "RAM          108.562 KB  88.016 KB   20.547 KB    81.1 %\n"
      ]
     }
    ],
@@ -976,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1003,14 +1049,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1021,19 +1062,26 @@
       "Hello\n",
       "Hello\n",
       "Hello\n",
+      "\n",
+      "\n",
+      "*** Sending Ctrl-C\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 3, in <module>\n",
+      "KeyboardInterrupt: \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):\n",
+    "for i in range(10):\n",
     "    print('Hello')\n",
     "    time.sleep(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1046,6 +1094,74 @@
    ],
    "source": [
     "%disconnect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%disconnect\n",
+      "    disconnects device\n",
+      "\n",
+      "%lsmagic\n",
+      "    list magic commands\n",
+      "\n",
+      "%rebootdevice\n",
+      "    reboots device\n",
+      "\n",
+      "%is_reachable\n",
+      "    Test if device is reachable (must be connected first)\n",
+      "\n",
+      "%serialconnect [-kbi] [portname] [baudrate]\n",
+      "    connects to a device over USB, default baudrate is 115200\n",
+      "\n",
+      "%websocketconnect [--password PASSWORD] [-kbi] [-ssl] [websocketurl]\n",
+      "    connects to the WebREPL over wifi (WebREPL daemon must be running)\n",
+      "    websocketurl defaults to 192.168.4.1 (uri -> ws://192.168.4.1:8266)\n",
+      "\n",
+      "%bleconnect [bleaddress]\n",
+      "    connects to the BleREPL over Bluetooth Low Energy(BleREPL must be running)\n",
+      "%meminfo\n",
+      "    Shows RAM size/used/free/use% info\n",
+      "\n",
+      "%whoami\n",
+      "    Shows Device name, port, id, and system info\n",
+      "\n",
+      "%gccollect\n",
+      "    To use the garbage collector and free some RAM if possible\n",
+      "\n",
+      "%local\n",
+      "    To run the cell contents in local iPython\n",
+      "\n",
+      "%sync\n",
+      "    To sync a variable/output data structure of the device into iPython \n",
+      "    if no var name provided it stores the output into _\n",
+      "\n",
+      "%logdata [-fs FS] [-tm TM] [-u U [U ...]] [-s] v [v ...]\n",
+      "    To log output data of the device into iPython, \n",
+      "    data is stored in 'devlog'\n",
+      "\n",
+      "   positional arguments:\n",
+      "      v             Name of variables\n",
+      "   optional arguments:\n",
+      "      -fs FS        Sampling frequency in Hz\n",
+      "      -tm TM        Sampling timeout in ms\n",
+      "      -u U [U ...]  Unit of variables\n",
+      "      -s            Silent mode\n",
+      "    \n",
+      "%devplot\n",
+      "    To plot devlog data\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%lsmagic"
    ]
   },
   {
