--- a/upydevice_kernel_demo.ipynb
+++ b/upydevice_kernel_demo.ipynb
@@ -864,14 +864,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mDevice esp32 disconnected.\u001b[0m"
+      "\u001b[31mDevice  disconnected.\u001b[0m"
      ]
     }
    ],
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -896,10 +896,10 @@
       " ** BleREPL connected **\n",
       "\u001b[0m\n",
       "BleDevice @ 9998175F-9A91-4CA2-B5EA-482AFC3453B9, Type: esp32 , Class: BleDevice\n",
-      "Firmware: MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
-      "(MAC: 30:ae:a4:23:35:64, Local Name: esp32-34, RSSI: -50 dBm)\n",
+      "Firmware: MicroPython v1.17 on 2021-09-02; ESP32 module with ESP32\n",
+      "(MAC: 30:ae:a4:23:35:64, Local Name: esp32-34, RSSI: -55 dBm)\n",
       "\n",
-      "MicroPython v1.16 on 2021-06-24; ESP32 module with ESP32\n",
+      "MicroPython v1.17 on 2021-09-02; ESP32 module with ESP32\n",
       "Type \"help()\" for more information.\n"
      ]
     }
@@ -910,13 +910,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Hello\n"
      ]
     }
@@ -927,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,14 +946,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "3\n"
      ]
     }
@@ -963,9 +963,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -982,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -992,8 +997,8 @@
       "DEVICE: esp32-34, UUID: 9998175F-9A91-4CA2-B5EA-482AFC3453B9, ID: 30aea4233564\n",
       "SYSTEM NAME: esp32\n",
       "NODE NAME: esp32\n",
-      "RELEASE: 1.16.0\n",
-      "VERSION: v1.16 on 2021-06-24\n",
+      "RELEASE: 1.17.0\n",
+      "VERSION: v1.17 on 2021-09-02\n",
       "MACHINE: ESP32 module with ESP32\n"
      ]
     }
@@ -1004,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1017,7 @@
      "output_type": "stream",
      "text": [
       "Memmory         Size        Used       Avail        Use%    \n",
-      "RAM          108.562 KB  88.016 KB   20.547 KB    81.1 %\n"
+      "RAM          108.562 KB  30.906 KB   77.656 KB    28.5 %\n"
      ]
     }
    ],
@@ -1022,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1049,9 +1054,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1061,11 +1071,16 @@
       "Hello\n",
       "Hello\n",
       "Hello\n",
-      "Hello\n",
       "\n",
       "\n",
       "*** Sending Ctrl-C\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Traceback (most recent call last):\n",
       "  File \"<stdin>\", line 3, in <module>\n",
       "KeyboardInterrupt: \n",
@@ -1081,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
